Remove delayed tasks from IsIdleForTesting() calculation.

Recent changes to the semantics of MessageLoop::IsIdleForTesting() added
a check for delayed tasks which have become due. Since many tests, e.g.
those in net_unittests, share the same MessageLoop, this could result in
a delayed task (e.g. posted by a OneShotTimer) from an earlier test
becoming ready-to-run during a later test, and thereby causing
IsIdleForTesting() to unexpectedly be false.

To remove the scope for timing-dependent test flakes, do not consider
delayed tasks in the IsIdleForTesting() calculation.

Bug: 799081
Change-Id: If2b39814f7d3c8b51a519d06905be7597c7d133c